// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Component Deciding when to use the EsvInputWrapper component Has the field type component as the top level component when placeholder entry is disabled and not supported for the field type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (22)",
    "
",
    " at <Anonymous",
    "onBlur=fn<blur>",
    "class="polyfill-placeholder"",
    "aria-label="Press ESC followed by tab for keyboard navigation out of editor"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput167"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (3)",
    "
",
    " at <Anonymous",
    "onBlur=fn<blur>",
    "class="polyfill-placeholder"",
    "aria-label="Press ESC followed by tab for keyboard navigation out of editor"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput167"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (3)",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput167"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_HOOKS) (2)",
  ],
]
`;

exports[`Field Component Deciding when to use the EsvInputWrapper component Has the field type component as the top level component when placeholder entry is disabled but supported for the field type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (2)",
    "
",
    " at <FrCheckbox",
    "name="bob"",
    "value="bill"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component Deciding when to use the EsvInputWrapper component Has the field type component as the top level component when placeholder entry is enabled but not supported for the field type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (12)",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (6)",
    "
",
    " at <Anonymous",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onBlur=fn<blur>",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (7)",
    "
",
    " at <Anonymous",
    "onBlur=fn<blur>",
    "class="polyfill-placeholder"",
    "aria-label="Press ESC followed by tab for keyboard navigation out of editor"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput161"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (21)",
    "
",
    " at <Anonymous",
    "onBlur=fn<blur>",
    "class="polyfill-placeholder"",
    "aria-label="Press ESC followed by tab for keyboard navigation out of editor"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput161"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (2)",
    "
",
    " at <Anonymous",
    "onBlur=fn<blur>",
    "class="polyfill-placeholder"",
    "aria-label="Press ESC followed by tab for keyboard navigation out of editor"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput161"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <JsonInput",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="json"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_HOOKS) "hook:beforeDestroy" lifecycle events are no longer supported. From templates, use the "vue:" prefix instead of "hook:". For example, @hook:beforeDestroy should be changed to @vue:beforeDestroy. From JavaScript, use Composition API to dynamically register lifecycle hooks.
  Details: https://v3-migration.vuejs.org/breaking-changes/vnode-lifecycle-events.html",
  ],
]
`;

exports[`Field Component Showing a readonly string input when the field value is a placeholder does not switch to the ReadonlyPlaceholderInput instead of the normal input type when the value is changed to a placeholder string and placeholder entry is not allowed: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "canEnterPlaceholders" with v-bind value \`false\` will render canEnterPlaceholders="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BasicInput",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component Showing a readonly string input when the field value is a placeholder shows the ReadonlyPlaceholderInput instead of the normal input type when the initial value is a placeholder string: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (12)",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput72"",
    "name="test"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "name="test"",
    "type="checkbox"",
    "id="test"",
    " ...",
    ">",
    "
",
    " at <ReadonlyPlaceholderInput",
    "name="test"",
    "value="&{esv-myesv}"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="test"",
    "value="&{esv-myesv}"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (7)",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput72"",
    "name="test"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "name="test"",
    "type="checkbox"",
    "id="test"",
    " ...",
    ">",
    "
",
    " at <ReadonlyPlaceholderInput",
    "name="test"",
    "value="&{esv-myesv}"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="test"",
    "value="&{esv-myesv}"",
    "type="checkbox"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component Showing a readonly string input when the field value is a placeholder switches to the ReadonlyPlaceholderInput instead of the normal input type when the value is changed to a placeholder string and placeholder entry is allowed: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (13)",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (13)",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (5)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (4)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (4)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (14)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (8)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (9)",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (14)",
    "
",
    " at <BDropdownText>",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (15)",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (4)",
    "
",
    " at <SearchInput",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "placeholder="Search secrets & variables"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (15)",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (10)",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (16)",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (16)",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (11)",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (17)",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (5)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (18)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (17)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (12)",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (19)",
    "
",
    " at <BInputGroupText",
    "class="border-0"",
    ">",
    "
",
    " at <BInputGroupAddon",
    "id=undefined",
    "isText=false",
    "tag="div"",
    " ...",
    ">",
    "
",
    " at <BInputGroupPrepend>",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (6)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) (2)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (20)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (5)",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "aria-invalid" with v-bind value \`false\` will render aria-invalid="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BFormInput",
    "ref="searchInput"",
    "placeholder="Search secrets & variables"",
    "aria-label="Search secrets & variables"",
    " ...",
    ">",
    "
",
    " at <BInputGroup>",
    "
",
    " at <SearchInput",
    "placeholder="Search secrets & variables"",
    "class="border-bottom border-top"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "disabled" with v-bind value \`false\` will render disabled="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BForm",
    "class="b-dropdown-form"",
    "onSubmit=fn",
    "onClick=fn",
    " ...",
    ">",
    "
",
    " at <BDropdownForm",
    "onSubmit=fn",
    "onClick=fn",
    ">",
    "
",
    " at <BDropdown",
    "right=""",
    "no-caret=""",
    "variant="link"",
    " ...",
    ">",
    "
",
    " at <EsvDropdown",
    "class="within-input-button"",
    "is-within-input=""",
    "field-type="string"",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput92"",
    "name="bob"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "key=0",
    "name="bob"",
    "value="bill"",
    " ...",
    ">",
    "
",
    " at <FrEsvInputWrapper",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="bob"",
    "value="bill"",
    "type="string"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses bootstrap form tags component for tag type: console-error-snapshot 1`] = `
[
  [
    "^ The above deprecation's compat behavior is disabled and will likely lead to runtime errors.",
  ],
  [
    "^ The above deprecation's compat behavior is disabled and will likely lead to runtime errors.",
  ],
]
`;

exports[`Field Component uses bootstrap form tags component for tag type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (7)",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (4)",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) v-model usage on component has changed in Vue 3. Component that expects to work with v-model should now use the "modelValue" prop and emit the "update:modelValue" event. You can update the usage and then opt-in to Vue 3 behavior on a per-component basis with \`compatConfig: { COMPONENT_V_MODEL: false }\`.
  Details: https://v3-migration.vuejs.org/breaking-changes/v-model.html",
    "
",
    " at <BFormTags",
    "modelValue=",
    [],
    "onUpdate:modelValue=fn",
    "onInput=fn<bound handleInput>",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_DATA_MERGE) Detected conflicting key "bvListeners" when merging data option values. In Vue 3, data keys are merged shallowly and will override one another.
  Details: https://v3-migration.vuejs.org/breaking-changes/data-option.html#mixin-merge-behavior-change",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (8)",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (6)",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) \`beforeDestroy\` has been renamed to \`beforeUnmount\`.",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation CUSTOM_DIR) Custom directive hook "bind" has been removed. Use "beforeMount" instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/custom-directives.html",
    "
",
    " at <Draggable",
    "modelValue=",
    [
      "should convert to empty array without hitting return",
    ],
    "onUpdate:modelValue=fn",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (9)",
    "
",
    " at <Draggable",
    "modelValue=",
    [
      "should convert to empty array without hitting return",
    ],
    "onUpdate:modelValue=fn",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) vm.$on/$once/$off() have been removed. Use an external event emitter library instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/events-api.html",
    "
",
    " at <Draggable",
    "modelValue=",
    [
      "should convert to empty array without hitting return",
    ],
    "onUpdate:modelValue=fn",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (2)",
    "
",
    " at <Draggable",
    "modelValue=",
    [
      "should convert to empty array without hitting return",
    ],
    "onUpdate:modelValue=fn",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) (2)",
    "
",
    " at <Draggable",
    "modelValue=",
    [
      "should convert to empty array without hitting return",
    ],
    "onUpdate:modelValue=fn",
    "disabled=false",
    " ...",
    ">",
    "
",
    " at <BFormTags",
    "onInput=fn<bound handleInput>",
    "add-on-change=""",
    "autofocus=false",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "description=""",
    "id="floatingLabelInput39___input__"",
    "class=""",
    " ...",
    ">",
    "
",
    " at <Tag",
    "type="tag"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="array"",
    "name="testField"",
    "value=",
    [],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[BootstrapVue warn]: tooltip - The provided target is no valid HTML element.",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_EVENT_EMITTER) (3)",
  ],
  [
    "[Vue warn]: (deprecation CUSTOM_DIR) Custom directive hook "componentUpdated" has been removed. Use "updated" instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/custom-directives.html",
  ],
]
`;

exports[`Field Component uses checkbox component for checkbox type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (11)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (8)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (7)",
    "
",
    " at <FrCheckbox",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="checkbox"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses key value list component for object type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (10)",
    "
",
    " at <KeyValueList",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (5)",
    "
",
    " at <KeyValueList",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (3)",
    "
",
    " at <KeyValueList",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="object"",
    "name="testField"",
    "value=",
    {},
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses multiselect floating label input for multiselect type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (6)",
    "
",
    " at <MultiSelect",
    "type="multiselect"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="multiselect"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses password floating label input for password type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BInputGroupAppend> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BInputGroupAppend",
    "key=0",
    "class="within-input-button"",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <BInputGroupAppend",
    "key=0",
    "class="within-input-button"",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <BInputGroupAppend",
    "key=0",
    "class="within-input-button"",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BInputGroupAddon",
    "key=0",
    "class="within-input-button"",
    "id=undefined",
    " ...",
    ">",
    "
",
    " at <BInputGroupAppend",
    "key=0",
    "class="within-input-button"",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BButton",
    "onClick=fn<bound revealText>",
    "class=""",
    "name="revealButton"",
    " ...",
    ">",
    "
",
    " at <BInputGroupAddon",
    "key=0",
    "class="within-input-button"",
    "id=undefined",
    " ...",
    ">",
    "
",
    " at <BInputGroupAppend",
    "key=0",
    "class="within-input-button"",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput14"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="password"",
    "name="testField"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses select floating label input for select type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (3)",
    "
",
    " at <SelectInput",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (4)",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput23"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput23"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "appear" with v-bind value \`false\` will render appear="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "name="multiselect__loading"",
    ">",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput23"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput23"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "persisted" with v-bind value \`false\` will render persisted="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <Transition",
    "name="multiselect__loading"",
    ">",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput23"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput23"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_ENUMERATED_COERCION) Enumerated attribute "spellcheck" with v-bind value \`false\` will render the value as-is instead of coercing the value to "true" in Vue 3. Always use explicit "true" or "false" values for enumerated attributes. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_ENUMERATED_COERCION: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <VueMultiselect",
    "id="floatingLabelInput23"",
    "ref="vms"",
    "value=""",
    " ...",
    ">",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput23"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <SelectInput",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (5)",
    "
",
    " at <FrField",
    "type="select"",
    "name="testField"",
    "options=",
    [
      {
        "text": "option1",
        "value": "enum1",
      },
      {
        "text": "option2",
        "value": "enum2",
      },
    ],
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses spinbutton component for spinbutton type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (9)",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (8)",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (3)",
    "
",
    " at <BFormSpinbutton",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onInput=fn<bound handleInput>",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (4)",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation OPTIONS_BEFORE_DESTROY) (3)",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (9)",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (4)",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (3)",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (10)",
    "
",
    " at <BIconDash",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (10)",
    "
",
    " at <BIconDash",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (5)",
    "
",
    " at <BIconDash",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (11)",
    "
",
    " at <BIconBase",
    "aria-label="dash"",
    "aria-hidden="true"",
    "title=undefined",
    " ...",
    ">",
    "
",
    " at <BIconDash",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Failed setting prop "type" on <output>: value spinbutton is invalid.",
    [TypeError: Cannot set property type of [object HTMLOutputElement] which has only a getter],
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (12)",
    "
",
    " at <BIconPlus",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (11)",
    "
",
    " at <BIconPlus",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (6)",
    "
",
    " at <BIconPlus",
    "aria-hidden="true"",
    "scale=1.25",
    ">",
    "
",
    " at <BFormSpinbutton",
    "onInput=fn<bound handleInput>",
    "inline=""",
    "name="testField"",
    " ...",
    ">",
    "
",
    " at <SpinButton",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="spinbutton"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses string floating label input for string type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <FrField",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <BasicInput",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "placeholder" with v-bind value \`false\` will render placeholder="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput4"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "aria-describedby" with v-bind value \`false\` will render aria-describedby="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <InputLayout",
    "id="floatingLabelInput4"",
    "name="testField"",
    "description=""",
    " ...",
    ">",
    "
",
    " at <BasicInput",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <FrField",
    "name="testField"",
    "value=""",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`Field Component uses toggle button component for boolean type: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (7)",
    "
",
    " at <FrSwitch",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (6)",
    "
",
    " at <FrSwitch",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_V_MODEL) (2)",
    "
",
    " at <BFormCheckbox",
    "modelValue=""",
    "onUpdate:modelValue=fn",
    "onInput=fn<bound handleInput>",
    " ...",
    ">",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (3)",
    "
",
    " at <BFormCheckbox",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    "role="switch"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) (2)",
    "
",
    " at <BFormCheckbox",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    "role="switch"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_ATTRS_CLASS_STYLE) Component <BFormCheckbox> has \`inheritAttrs: false\` but is relying on class/style fallthrough from parent. In Vue 3, class/style are now included in $attrs and will no longer fallthrough when inheritAttrs is false. If you are already using v-bind="$attrs" on component root it should render the same end result. If you are binding $attrs to a non-root element and expecting class/style to fallthrough on root, you will need to now manually bind them on root via :class="$attrs.class".
  Details: https://v3-migration.vuejs.org/breaking-changes/attrs-includes-class-style.html",
    "
",
    " at <BFormCheckbox",
    "onInput=fn<bound handleInput>",
    "class="d-inline-flex fr-toggle-primary"",
    "role="switch"",
    " ...",
    ">",
    "
",
    " at <FrSwitch",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <FrField",
    "type="boolean"",
    "name="testField"",
    "value=true",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
